--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
+<div class="page-wrap">
 <cs-navigation></cs-navigation>
  <div class="main-content">
   <div class="container">
     <router-outlet></router-outlet>
   </div>
+</div>
 </div>
 <cs-footer></cs-footer> 
