--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,11 +1,12 @@
+* {
+  margin: 0; }
+
+html, body {
+  height: 100%;
+  padding: 0; }
+
 html {
   box-sizing: border-box; }
-
-html,
-body {
-  height: 100%;
-  padding: 0;
-  margin: 0; }
 
 *,
 *:before,
@@ -22,17 +23,26 @@ a,
 a:hover {
   text-decoration: none; }
 
-my-app {
-  display: table;
-  width: 100%;
-  height: 100%; }
+.main-content {
+  margin: 0;
+  margin-bottom: 25px; }
+
+.page-wrap {
+  min-height: 100%;
+  /* equal to footer height */
+  margin-bottom: -257px; }
+
+.page-wrap:after {
+  content: "";
+  display: block; }
+
+footer, .page-wrap:after {
+  /* .push must be the same height as footer */
+  height: 257px; }
 
 cs-navigation,
 cs-footer {
   height: 1px; }
-
-.main-content {
-  height: auto; }
 
 .container-fluid {
   max-width: 1360px;
@@ -82,47 +92,46 @@ cs-footer {
   font-size: 16px;
   margin-left: 15px; }
 
-footer {
-  margin-top: 40px; }
-  footer .navigation {
-    background-color: #741b47;
-    font-size: 1.37143em; }
-    footer .navigation .container-fluid {
-      padding-left: 0px;
-      padding-right: 0px; }
-    footer .navigation .item {
-      padding: 0px;
-      min-height: 177px;
-      text-align: center;
-      -webkit-transition: background-color .3s ease-out;
-      transition: background-color .3s ease-out; }
-      footer .navigation .item a {
-        color: #fff;
-        padding: 50px 30px;
-        display: block;
-        margin-top: 25px;
-        border-left: 1px solid #421029; }
-        footer .navigation .item a .fa {
-          display: none;
-          margin-right: 0.3em;
-          vertical-align: middle;
-          font-size: 2em; }
-      footer .navigation .item:first-child a {
-        border-left: 0px; }
-      footer .navigation .item:hover, footer .navigation .item.active {
-        background-color: #421029; }
-  footer .contacts {
-    background-color: #333;
-    min-height: 80px;
-    color: #c2c2c2;
-    padding-top: 30px;
-    padding-bottom: 30px; }
-    footer .contacts .container-fluid {
-      padding-left: 31px;
-      padding-right: 31px; }
-    footer .contacts a {
-      text-decoration: underline;
-      color: #c2c2c2; }
+footer .navigation {
+  background-color: #741b47;
+  font-size: 1.37143em; }
+  footer .navigation .container-fluid {
+    padding-left: 0px;
+    padding-right: 0px; }
+  footer .navigation .item {
+    padding: 0px;
+    min-height: 177px;
+    text-align: center;
+    -webkit-transition: background-color .3s ease-out;
+    transition: background-color .3s ease-out; }
+    footer .navigation .item a {
+      color: #fff;
+      padding: 50px 30px;
+      display: block;
+      margin-top: 25px;
+      border-left: 1px solid #421029; }
+      footer .navigation .item a .fa {
+        display: none;
+        margin-right: 0.3em;
+        vertical-align: middle;
+        font-size: 2em; }
+    footer .navigation .item:first-child a {
+      border-left: 0px; }
+    footer .navigation .item:hover, footer .navigation .item.active {
+      background-color: #421029; }
+
+footer .contacts {
+  background-color: #333;
+  min-height: 80px;
+  color: #c2c2c2;
+  padding-top: 30px;
+  padding-bottom: 30px; }
+  footer .contacts .container-fluid {
+    padding-left: 31px;
+    padding-right: 31px; }
+  footer .contacts a {
+    text-decoration: underline;
+    color: #c2c2c2; }
 
 /* eXtra Small */
 @media screen and (max-width: 767px) {
