--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -4,15 +4,17 @@ $main-color: #741b47;
 $main-color-dark: #421029;
 $navigation-font-size: 1.27143em;
 $navigation-footer-font-size: 1.37143em;
-html {
-    box-sizing: border-box;
-}
 
-html,
-body {
+* {
+	margin: 0;
+}
+html, body {
     height: 100%;
     padding: 0;
-    margin: 0;
+}
+
+html {
+    box-sizing: border-box;
 }
 
 *,
@@ -34,19 +36,30 @@ a:hover {
     text-decoration: none;
 }
 
-my-app {
-    display: table;
-    width: 100%;
-    height: 100%;
+.main-content {
+    margin: 0;
+    margin-bottom: 25px;
+}
+
+.page-wrap {
+  min-height: 100%;
+  /* equal to footer height */
+	margin-bottom: -257px; 
+}
+
+.page-wrap:after {
+  content: "";
+  display: block;
+}
+
+footer, .page-wrap:after {
+  /* .push must be the same height as footer */
+	height: 257px; 
 }
 
 cs-navigation,
 cs-footer {
     height: 1px;
-}
-
-.main-content {
-    height: auto;
 }
 
 .container-fluid {
@@ -66,8 +79,7 @@ cs-footer {
         background-color: #fff;
         border: 0px;
         border-radius: 0px;
-        border-bottom: 1px solid #e7e7e7;
-        //border-color: transparent;
+        border-bottom: 1px solid #e7e7e7; //border-color: transparent;
         .navbar-brand {
             max-width: 400px;
             height: 100%;
@@ -124,7 +136,6 @@ cs-footer {
 }
 
 footer {
-    margin-top: 40px;
     .navigation {
         background-color: $main-color;
         font-size: $navigation-footer-font-size;
