--- a/src/app/curriculum/curriculum.component.html
+++ b/src/app/curriculum/curriculum.component.html
@@ -28,14 +28,14 @@
                     <li>Membro do Conselho Pedagógico da Faculdade de Direito e Ciência Politica (com funções de secretário);</li>
                 </ol>
             </li>
-            <li>Juiz-Árbitro no Tribunal Arbitral de Consumo (Braga).</li>
+            <li>Juiz-Árbitro em Tribunais Arbitrais de Consumo (<a href="http://www.ciab.pt/pt" target="_blank">CIAB</a> e <a href="http://www.triave.pt/" target="_blank">TRIAVE</a>).</li>
             <li>Membro do GITUR-Grupo de Investigação em Turismo (IPL-Instituto Politécnico de Leiria).</li>
             <li>Membro do Conselho Coordenador do ONAT-Observatório Nacional das Actividades de Animação Turística.</li>
             <li>Formador certificado na área do Direito.</li>
         </ol>
         <p style="font-weight:bold;">Anterior:</p>
         <ol>
-            <li>Vereador da Câmara Municipal de Barcelos no mandato 2009/2013.</li>
+            <li>Vereador da Câmara Municipal de Barcelos no mandato 2009/2013 (com os pelouros atribuídos de Ambiente, Trânsito, Turismo e Artesanato).</li>
             <li>Vice-Presidente do CIAB-Tribunal Arbitral de Consumo no quadriénio 2009/2013.</li>
             <li>Docente do IPCA-Instituto Politécnico do Cávado e Ave em 2008/2009.</li>
             <li>Participação em Palestras, Conferências e Congressos, essencialmente no domínio do Direito e do Turismo.</li>
