--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -2,7 +2,7 @@
     <nav class="navbar navbar-default">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" (click)="isCollapsed = !isCollapsed"
+            <button type="button" class="navbar-toggle collapsed nav-mobile" (click)="isCollapsed = !isCollapsed"
           [attr.aria-expanded]="!isCollapsed" data-target="#cesar-pires-navigation" aria-controls="cesar-pires-navigation">
         <span class="nav-menu-mobile">Menu</span>
         <span class="icon-bar"></span>
