--- a/src/app/activities/activities.component.html
+++ b/src/app/activities/activities.component.html
@@ -1,19 +1,19 @@
 <div id="activities">
     <section>
         <h2>Áreas de exercício preferencial</h2>
-        <h3>Direito da Família</h3>
         <h3>Direito Comercial / Empresarial</h3>
         <h3>Direito Comercial Internacional</h3>
-        <h3>Direito da União Europeia</h3>
         <h3>Direito das Sociedades</h3>
         <h3>Direito dos Contratos</h3>
-        <h3>Direitos Reais</h3>
         <h3>Direito dos Transportes</h3>
+        <h3>Direito dos Seguros</h3>
+        <h3>Direito Bancário</h3>
+        <h3>Direito do Consumo</h3>
+        <h3>Direito da União Europeia</h3>
+        <h3>Direito da Família</h3>
+        <h3>Direito Reais</h3>
         <h3>Direito do Turismo</h3>
         <h3>Direito do Trabalho</h3>
-        <h3>Direito Bancário</h3>
-        <h3>Direito dos Seguros</h3>
-        <h3>Direito do Consumidor</h3>
         <h3>Direito da Propriedade Intelectual</h3>
     </section>
     <section>
