--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,39 +1,22 @@
 <div id="home">
-    <section>
-        <h2>Bem-vindo</h2>
-        <div class="welcome-image">
-            <img src="images/Cesar.jpg" alt="César Manuel Ferreira Pires" class="img-thumbnail img-responsive">
-        </div>
-        <div class="welcome-message">
-            <p class="text-justify">
-                César Pires é Licenciado e Mestre em Direito, Pós-graduado em Direito Bancário, da Bolsa e Seguros e atualmente exerce na
-                Póvoa de Varzim.
-            </p>
-            <p class="text-justify">
-                César Pires é, também, docente na Universidade Lusófona do Porto (onde leciona Teoria Geral do Direito Civil, Direito Comercial,
-                Direito das Sociedades Comerciais e Direito Internacional Privado), Juiz-árbitro no Tribunal Arbitral de
-                Consumo, membro do GITUR-Grupo de Investigação em Turismo (IPL-Instituto Politécnico de Leiria) e do Conselho
-                Coordenador do ONAT-Observatório Nacional das Atividades de Animação Turística e formador certificado (IEFP)
-                na área do Direito.
-            </p>
-        </div>
-        <div class="clearfix"></div>
-    </section>
-    <section>
-        <h2>Noticias</h2>
-        <div id="newsContentiner">
-            <div *ngIf='newsCollection && newsCollection.length'>
-                <div class="news" *ngFor='let item of newsCollection'>
-                    <div *ngIf="item.photoUrl" class="img-container hidden-sm hidden-xs">
-                        <img [src]="item.photoUrl" class="img-rounded img-news">
-                    </div>
-                    <div class="newsContent">
-                        <h4 class="title"> <a target="_blank" [href]="item.newsUrlTitle"> {{item.newsTitle}} </a></h4>
-                        <p class="newsDate">{{item.newsDate}}</p>
-                        <p style="text-align: justify">{{item.newsContent}} - <span>Fonte: <a [href]="item.font">{{item.font}}</a></span></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+  <section>
+    <h2>Bem-vindo</h2>
+    <div class="welcome-image">
+      <img src="images/Cesar.png" alt="César Manuel Ferreira Pires" class="img-thumbnail img-responsive">
+    </div>
+    <div class="welcome-message">
+      <p class="text-justify">
+        César Pires é Licenciado e Mestre em Direito, Pós-graduado em Direito Bancário, da Bolsa e Seguros.
+      </p>
+      <p class="text-justify">
+        César Pires é, também, docente na Universidade Lusófona do Porto (onde leciona Teoria Geral do Direito Civil,
+        Direito Comercial, Direito das Sociedades Comerciais e Direito Internacional Privado), Juiz-árbitro em Tribunais
+        Arbitrais de Consumo, Diretor do “Curso de Preparação para o Exame de Agregação da Ordem dos Advogados” (ULP) e
+        formador na área de Deontologia Profissional.
+      </p>
+    </div>
+    <div class="clearfix"></div>
+  </section>
+  <section>
+  </section>
 </div>
