--- a/src/app/publications/publications.component.html
+++ b/src/app/publications/publications.component.html
@@ -1,31 +1,29 @@
 <div id="publications">
-    <section>
-        <h2>Publicações</h2>
-        <p>
-            Pires, César M.F. e Oliveira, António Cândido de (Orgs.), "O ESTADO DA JUSTIÇA", Edições Universitárias Lusófonas, 2017.
-        </p>
-        <p>
-            Pires, César M. F. <a href="http://www.revista-aji.com/articulos/2017/174-195.pdf" target="_blank">"A Posição jurídica do devedor face ao contrato de factoring"</a>, Actualidad Jurídica Iberoamericana, núm. 6, febrero 2017, pp. 174 - 195.
-        </p>
-        <p>
-            Pires, César M.F., 2016,
-            <a href="http://idibe.org/wp-content/uploads/2013/09/N%C2%BA-4-.pdf" title="Actualidad Jurídica Ibéroamericana" target="_blank">“A transferência (Inter)nacional da sede da Sociedade Anónima Europeia”</a>,
-            Actualidad Jurídica Ibéroamericana, N.º 4, febrero de 2016.
-        </p>
-        <p>
-            Pires, César M. F. 2013. <a target="_blank" href="http://revistas.ulusofona.pt/index.php/rfdulp/article/view/3251">"A lei aplicável à sociedade anónima europeia (societas europaea)" </a>,
-            Revista da Faculdade de Direito da Universidade Lusófona do Porto 2, 2: 117 – 134
-        </p>
-        <p>
-            Pires, César M. F. 2007. "A Oferta Pública de Aquisição Tendente ao Domínio Total", Reflexões-Revista Cientifica da Universidade
-            Lusófona do Porto, 2: 95 - 116 (<a href="/docs/article1.pdf" target="_blank">PDF</a>)
-        </p>
-    </section>
-    <section>
-        <h2>Projectos Científicos</h2>
-        <p>
-            No âmbito de um projecto conjunto com outros docentes e investigadores criou o ONAT-Observatório Nacional das Actividades
-            de Animação Turística.
-        </p>
-    </section>
+  <section>
+    <h2>Publicações</h2>
+    <p>
+      Pires, César M.F., 2016,
+      <a href="http://idibe.org/wp-content/uploads/2013/09/N%C2%BA-4-.pdf" title="Actualidad Jurídica Ibéroamericana"
+        target="_blank">“A transferência (Inter)nacional da sede da Sociedade Anónima Europeia”</a>,
+      Actualidad Jurídica Ibéroamericana, N.º 4, febrero de 2016.
+    </p>
+    <p>
+      Pires, César M. F. 2013. <a target="_blank"
+        href="http://revistas.ulusofona.pt/index.php/rfdulp/article/view/3251">"A lei aplicável à sociedade anónima
+        europeia (societas europaea)" </a>,
+      Revista da Faculdade de Direito da Universidade Lusófona do Porto 2, 2: 117 – 134
+    </p>
+    <p>
+      Pires, César M. F. 2007. "A Oferta Pública de Aquisição Tendente ao Domínio Total", Reflexões-Revista Cientifica
+      da Universidade
+      Lusófona do Porto, 2: 95 - 116 (<a href="/docs/article1.pdf" target="_blank">PDF</a>)
+    </p>
+  </section>
+  <section>
+    <h2>Projectos Científicos</h2>
+    <p>
+      No âmbito de um projecto conjunto com outros docentes e investigadores criou o ONAT-Observatório Nacional das
+      Actividades de Animação Turística.
+    </p>
+  </section>
 </div>
