--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,20 +1,28 @@
 <div id="home">
   <section>
-    <h2>Bem-vindo</h2>
-    <div class="welcome-image">
-      <img src="images/Cesar.png" alt="César Manuel Ferreira Pires" class="img-thumbnail img-responsive">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="welcome-image">
+          <img src="images/Cesar.png" alt="César Manuel Ferreira Pires" class="img-responsive web-image">
+        </div>
+      </div>
+      <div class="col-md-8">
+          <h2>Bem-vindo</h2>
+        <div class="welcome-message">
+          <p class="text-justify">
+            César Pires é Licenciado e Mestre em Direito, Pós-graduado em Direito Bancário, da Bolsa e Seguros.
+          </p>
+          <p class="text-justify">
+            César Pires é, também, docente na Universidade Lusófona do Porto (onde leciona Teoria Geral do Direito Civil,
+            Direito Comercial, Direito das Sociedades Comerciais e Direito Internacional Privado), Juiz-árbitro em Tribunais
+            Arbitrais de Consumo, Diretor do “Curso de Preparação para o Exame de Agregação da Ordem dos Advogados” (ULP) e
+            formador na área de Deontologia Profissional.
+          </p>
+        </div>
+      </div>
     </div>
-    <div class="welcome-message">
-      <p class="text-justify">
-        César Pires é Licenciado e Mestre em Direito, Pós-graduado em Direito Bancário, da Bolsa e Seguros.
-      </p>
-      <p class="text-justify">
-        César Pires é, também, docente na Universidade Lusófona do Porto (onde leciona Teoria Geral do Direito Civil,
-        Direito Comercial, Direito das Sociedades Comerciais e Direito Internacional Privado), Juiz-árbitro em Tribunais
-        Arbitrais de Consumo, Diretor do “Curso de Preparação para o Exame de Agregação da Ordem dos Advogados” (ULP) e
-        formador na área de Deontologia Profissional.
-      </p>
-    </div>
+
+
     <div class="clearfix"></div>
   </section>
   <section>
